overloaded-app/Deployment.flask-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: overloaded-app
  labels:
    app: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: fcbulychov/flask-app:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            limits:
              memory: "50Mi"
              cpu: "10m"
            requests:
              memory: "50Mi"
              cpu: "10m"
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
