overloaded-app/Service.flask-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: overloaded-app
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
