overloaded-app/Ingress.flask-app.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: flask-app-ingress
    namespace: overloaded-app
  spec:
    ingressClassName: nginx
    rules:
      - host: flask-app.testk8s.com
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: flask-app-service
                  port:
                    number: 8080
