overloaded-app/Ingress.monitoring.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: monitoring-ingress
    namespace: monitoring
  spec:
    ingressClassName: nginx
    rules:
      - host: monitoring.admink8s.com
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: monitoring-grafana
                  port:
                    number: 80
